tests/ui/derive/fail_unknown_api_schema_validate_rule.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
struct TypoValidateRule {
    #[validate(emial)]
    email: String,
}

fn main() {}
